# sunsofgold

./: README.md  app.py  pyproject.toml
data/: standard_commodities.csv  tags.json
react-app/: index.html  package-lock.json  package.json  tsconfig.json
react-app/public/data/: example_worlds.json  standard_commodities.json  tables.json  tags.json
react-app/src/: App.css  App.tsx  index.css
react-app/src/components/: HexMap.tsx  ManualGenerator.tsx  PlanetCard.tsx  PlanetDisplay.tsx  Sidebar.tsx  SystemDetailPanel.tsx  SystemView.tsx  TagGenerator.tsx  TemplateGenerator.tsx  TradeProfileDisplay.tsx  TradeProfileGenerator.tsx
react-app/src/data/: constants.ts  parser.ts
react-app/src/types/: index.ts
react-app/src/utils/: techLevelEnforcement.ts
react-app/src/utils/__tests__/: techLevelEnforcement.test.ts
sunsofgold/: generators.py  parser.py  stratch.py
